Added option to cache query results
Added caching option for query results and fixed Settings#getAjax(true)
re-creating the AjaxSettings object even if the object has already been
created

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 .project
 .classpath
 target
+.settings
 
+*.prefs
+*.jsdtscope
+*.prefs
+*.prefs
+wicket-select2-examples/.settings/org.eclipse.jdt.core.prefs
+wicket-select2-examples/.settings/org.eclipse.jdt.core.prefs
+wicket-select2/.settings/org.eclipse.jdt.core.prefs
